# kat-04.github.io

./: .__afs6638  .gitignore  CMakeCache.txt  CMakeLists.txt  GOL3D  Makefile  README.md  checker.py  cmake_install.cmake  execute.py  finalReport.html  generic.html  gol  gol-seq  index.html  milestone.html  proposal.html
input-files/: amoeba.txt  architecture.txt  basic-cube-init.txt  basic-fractal.txt  construction.txt  fill_box.py  fractal.txt  fractal2.txt  game_of_life.txt  gol-test.txt  gol_2d_imitation.txt  organized_amoeba.txt  pulse_waves.txt  replication-200.txt  replication.txt  state-cloud.txt  states-cloud2.txt  states-pyroclastic.txt  states-test.txt  states_spiky_growth.txt
output-files/: frame0.txt  frame1.txt  frame10.txt  frame100.txt  frame101.txt  frame102.txt  frame103.txt  frame104.txt  frame105.txt  frame106.txt  frame107.txt  frame108.txt  frame109.txt  frame11.txt  frame110.txt  frame111.txt  frame112.txt  frame113.txt  frame114.txt  frame115.txt  frame116.txt  frame117.txt  frame118.txt  frame12.txt  frame120.txt  frame121.txt  frame122.txt  frame124.txt  frame125.txt  frame126.txt  frame128.txt  frame129.txt  frame13.txt  frame130.txt  frame131.txt  frame132.txt  frame133.txt  frame134.txt  frame135.txt  frame136.txt  (+154 more)
render/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  GOL3D  Makefile  cmake_install.cmake  main.cpp  render_cube.cpp
render/src/: main-local.cpp  main-ssh.cpp  main.cpp  mesh.cpp  mesh.h
src/: bits-ambient.cpp  bits-ambient.h  bits.cpp  bits.h  cube.h  fileLoader.cpp  fileLoader.h  gol-cuda.cpp  (+22 more)
(+8 files in other folders)
